Fixed mobile overflowing and bug allowing opening of sidemenu from anywhere

--- a/events-board/src/components/Feed/style.scss
+++ b/events-board/src/components/Feed/style.scss
@@ -1,5 +1,5 @@
 .sbbtn {
-  position: absolute;
+  position: fixed;
   transform: translate(-50%, -50%);
   top: 90%;
   left: 90%;
