--- a/events-board/src/components/Home/style.scss
+++ b/events-board/src/components/Home/style.scss
@@ -1,57 +1,5 @@
-$bg: #2c148b;
-$text-color: #ffffff;
-$font: "Saira", sans-serif;
-
 .main {
   min-height: 100vh;
-}
-
-.sidebar {
-  background-color: $bg;
-
-  position: absolute;
-  z-index: 1;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-
-  left: 60%;
-  width: 40%;
-  height: 100vh;
-
-  transition: transform 400ms ease;
-
-  ul {
-    margin-left: 15px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column-reverse;
-    border-left: 1px solid #ffffff;
-    li {
-      margin: 10px 0;
-      a {
-        padding-left: 5px;
-        color: $text-color;
-        font-family: $font;
-        font-size: 18px;
-
-        transition: color 250ms ease-in-out;
-
-        &:hover {
-          color: lighten($bg, $amount: 30);
-        }
-      }
-    }
-  }
-}
-
-.true {
-  transform: translateX(0%);
-}
-
-.false {
-  transform: translateX(100%);
 }
 
 body {
